Fixed line-break while placing ListMarker in front of an overflow:hidden element.

In order to display ListMarker, it shouldn't attach to Layout tree as a 
child of overflow:hidden element, but as a sibling is OK.

Bug: 747695
Change-Id: Icaa312310c6fc30aeb78bc7359ca894835db122d
Reviewed-on: https://chromium-review.googlesource.com/593433
Commit-Queue: cathie chen <cathiechen@tencent.com>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490846}
Former-commit-id: d80f2f901ba7e631b1779c7acac4d9aebd48fe9b